refactor: organize archive-*

--- a/_includes/sidebar/archive-list.html
+++ b/_includes/sidebar/archive-list.html
@@ -1,78 +1,1 @@
-{%- assign url = '/publications/archives.html' | relative_url -%}
-
-<div class="common-list">
-  <ul>
-    <li>
-      <a href="{{ '/publications/index.html' | relative_url }}">
-        All<span>{{ site.posts.size }}</span>
-      </a>
-    </li>
-
-    {%- assign split_mark = '<|>' -%}
-
-    {%- assign dates = '' -%}
-    {%- assign unpublished = false -%}
-    {%- for post in site.posts -%}
-      {%- if post.accepted_at -%}
-        {%- assign unpublished = true -%}
-      {%- else -%}
-        {%- assign name = post.date | date: filter -%}
-        {%- assign dates = dates | append: split_mark  | append: name -%}
-      {%- endif -%}
-    {%- endfor -%}
-
-    {%- assign dates = dates
-      | remove_first: split_mark
-      | split: split_mark
-      | sort: self
-      | uniq
-      | reverse -%}
-
-    {%- if unpublished -%}
-      {%- assign items = site.posts | where_exp: "item", "item.accepted_at != nil" -%}
-      <li>
-        <a href="{{ url }}#h-unpublished">
-          Unpublished <span>{{ items.size }}</span>
-        </a>
-      </li>
-    {%- endif -%}
-
-    {%- assign published = site.posts | where_exp: "item", "item.accepted_at == nil" -%}
-
-    {%- assign max = dates | first -%}
-    {%- assign min = dates | last -%}
-    {%- assign start = min | divided_by: 10 -%}
-    {%- assign end = max | divided_by: 10 | times: 10 -%}
-    {%- if end == max -%}
-      {%- assign end = end | minus: 10 -%}
-    {%- endif -%}
-
-    {%- for year in (end..max) reversed -%}
-      {%- assign items = published | where: "date", year -%}
-      <li>
-        <a href="{{ url }}#h-{{ year }}">
-          {{ year }} <span>{{ items.size }}</span>
-        </a>
-      </li>
-    {%- endfor -%}
-
-    {%- assign start = start | plus: 1 -%}
-    {%- assign end = end | divided_by: 10 -%}
-    {%- for i in (start..end) reversed -%}
-      {%- assign next = i | times: 10 | minus: 1 -%}
-      {%- assign curr = next | minus: 9 -%}
-      {%- assign date_range = curr | append: "-" | append: next -%}
-
-      {%- assign curr_date = curr | append: "-01-01" | to_time -%}
-      {%- assign next_date = next | plus: 1 | append: "-01-01" | to_time -%}
-      {%- assign items = published
-        | where_exp: "item", "item.date >= curr_date"
-        | where_exp: "item", "item.date <= next_date" -%}
-      <li>
-        <a href="{{ url }}#h-{{ date_range }}">
-          {{ date_range }} <span>{{ items.size }}</span>
-        </a>
-      </li>
-    {%- endfor -%}
-  </ul>
-</div>
+{%- include archive-common.html sub="sidebar/archive-list-sub.html" -%}
