fix: add "noopener noreferrer" to external links
Fixes #11.

--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -21,10 +21,10 @@
         </span>
       </div>
       <div>Powered by
-        <a title="Jekyll is a simple, blog-aware, static site generator." target="_blank" href="https://jekyllrb.com/">Jekyll</a>,
+        <a title="Jekyll is a simple, blog-aware, static site generator." target="_blank" rel="noopener noreferrer" href="https://jekyllrb.com/">Jekyll</a>,
         <a title="Yat, yet
-            another theme." target="_blank" href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> &amp;
-        <a target="_blank" href="https://fontawsome.com">Font Awesome</a>.
+            another theme." target="_blank" rel="noopener noreferrer" href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a> &amp;
+        <a target="_blank" rel="noopener noreferrer" href="https://fontawsome.com">Font Awesome</a>.
       </div>
     </div>
   </div>
