--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -14,7 +14,7 @@
 
   <div class="wrapper">
     <div class="site-header-inner">
-      {%- assign default_paths = site.pages | where: "dir", "/" | map: "path" -%}
+      {%- assign default_paths = site.pages | where: "dir", "/menu" | map: "path" -%}
       {%- assign page_paths = site.header_pages | default: default_paths -%}
 
       <span class="site-brand">
