Replace highlight.js with server-side Rouge highlighting
Jekyll 3 and 4 process code blocks by default using Rouge[1], which adds
<span>s of various classes to the code indicating how different parts
should be highlighted. So to highlight code, all a theme needs to do is
include an appropriate stylesheet, which can be easily created for a
variety of color schemes using Rouge's `rougify style` command.

YAT, however, ignores the Rouge highlighting and instead includes
highlight.js, which does its own highlighting client-side. That
increases both bandwidth and client CPU usage for no clear benefit.
Furthermore, it tries to guess a language if none is specified even if
`guess_lang` is turned off in Jekyll's configuration, since `guess_lang`
only affects Rouge.

Let me know if there's a good reason to prefer highlight.js over Rouge,
but to me it it just looks like extra complexity for no gain. As such,
this change removes it and adds a Rouge stylesheet instead.

[1] https://github.com/rouge-ruby/rouge

--- a/_includes/extensions/code-highlight.html
+++ b/_includes/extensions/code-highlight.html
@@ -1,9 +1,4 @@
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js"></script>
-<!-- and it's easy to individually load additional languages -->
-<script charset="UTF-8"
-        src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/languages/go.min.js"
-        async></script>
+<link rel="stylesheet" href="{{ "/assets/css/code-highlight-rouge.css" | relative_url }}">
 
 {%- assign name = 'code_badge.enabled' -%}
 {%- include functions.html func='get_value' default='true' -%}
@@ -21,8 +16,8 @@
 {%- include functions.html func='get_value' default='uppercase' -%}
 {%- assign badge_text_transform = return -%}
 
+{%- if badge_enabled -%}
 <script>
-// Init highlight js
 document.addEventListener('DOMContentLoaded', function(event) {
   var els = document.querySelectorAll('pre code')
 
@@ -38,12 +33,11 @@ document.addEventListener('DOMContentLoaded', function(event) {
     }
     if (!lang) {
       cls = block.getAttribute('class');
-      lang = cls ? cls.replace('hljs ', '') : '';
+      lang = cls ? cls : '';
     }
     if (lang.startsWith('language-')) {
       lang = lang.substr(9);
     }
-    block.setAttribute('class', 'hljs ' + lang);
     block.parentNode.setAttribute('data-lang', lang);
   }
 
@@ -58,7 +52,6 @@ document.addEventListener('DOMContentLoaded', function(event) {
   function handle(block) {
     addLangData(block);
     addBadge(block)
-    hljs.highlightBlock(block);
   }
 
   for (var i = 0; i < els.length; i++) {
@@ -89,3 +82,4 @@ document.addEventListener('DOMContentLoaded', function(event) {
     display: none;
   }
 </style>
+{%- endif -%}
