--- a/_includes/views/pagination-item.html
+++ b/_includes/views/pagination-item.html
@@ -18,7 +18,7 @@
   <div class="post-meta">
     <span class="post-date"><i class="fa fa-calendar"></i> {{ post.date | date: date_format }}</span>
     {%- if post.author -%}
-    <span class="post-author left-vsplit"><i class="fa fa-user"></i> {{ post.author | escape }}</span>
+    <span class="post-author left-vsplit"><i class="fa fa-pencil"></i> {{ post.author | escape }}</span>
     {%- endif -%}
     <span class="post-reading-time left-vsplit"><i class="fa fa-clock-o"></i> {{ reading_time }}</span>
   </div>
