Add a dark theme for code blocks
Now that code highlighting is just a normal stylesheet, it's easy to add
a separate set of dark-mode rules. Do so and update the documentation.

Fixes #24

--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -30,6 +30,10 @@ html[data-theme="dark"]  {
     background-color: #454545;
   }
 
+  pre {
+    background-color: #222;
+  }
+
   blockquote {
     border-left: 4px solid #484848;
   }
