feat: add border to site header in dark mode

--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -52,6 +52,7 @@ html[data-theme="dark"] {
 
   .site-header {
     background-color: #090909;
+    box-shadow: 0 1px 0 0 #555;
 
     .site-brand .site-brand-inner {
       &,
