feat: reorganize research topic page

--- a/_includes/sidebar/category-list.html
+++ b/_includes/sidebar/category-list.html
@@ -6,4 +6,4 @@
 {%- assign keys = categories -%}
 {%- assign field = 'categories' -%}
 {%- assign url = '/publications/topics.html' | relative_url -%}
-{%- include sidebar/common-list.html -%}
+{%- include sidebar/common-list.html min_cnt = 3 -%}
