fix: add missing relative_url

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,5 +1,5 @@
 <figure class="image">
-	<img src="{{ include.url }}" alt="{{ include.description }}">
+	<img src="{{ include.url | relative_url }}" alt="{{ include.description }}">
 	{%- if include.description -%}
 	<figcaption>{{ include.description }}</figcaption>
 	{%- endif -%}
