fix: remove duplicate relative_url call

--- a/_includes/views/pagination-item.html
+++ b/_includes/views/pagination-item.html
@@ -20,7 +20,7 @@
 
 <li class="post-item {{ post_item_class }}">
   <h2 class="post-title">
-    <a class="post-link" href="{{ post_url | relative_url }}" {%- if post.redirect_to -%} target="_blank" rel="noopener noreferrer"{%- endif -%}>
+    <a class="post-link" href="{{ post_url }}" {%- if post.redirect_to -%} target="_blank" rel="noopener noreferrer"{%- endif -%}>
       {{ post.title }}
       {%- include views/post-badges.html -%}
     </a>
