--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,4 +6,4 @@ hidden:
   - related_posts
 ---
 
-{{ I graduated from the Department of Journalism at Konkuk University and received my Master's degree in Journalism from the Graduate School of Konkuk University, where I also completed my PhD. I have worked as a senior researcher at the Korea Internet & Security Agency and as an expert member of the Local Newspaper Development Committee. Currently, I am a Research Fellow at the Newspaper Development Research Institute of the Korean Newspaper Association and a Senior Researcher at the Center for Digital Communication Research at Konkuk University. My work mainly involves researching media policies for the development of domestic journalism. (Email: hyeonjinc@gmail.com) }}
+{{ content }}
