--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,5 +23,16 @@
 
     {%- include views/footer.html -%}
 
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
