small cosmetic changes
testing customization features

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,8 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
-banner: 'default'
+heading: 'Welcome to my crib'
+subheading: 'It needs a makeover'
+banner: '/assets/images/banners/landscape.jpg'
 ---
 
 {{ content }}
