--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -8,7 +8,7 @@
 {%- include functions.html func='get_value' default='z' -%}
 {%- assign image_style = return | append: '-image-style' -%}
 
-{%- if paginator.posts.size > 0 -%}
+{%- if paginator.next_page or paginator.previous_page -%}
 <div class="pagination">
   <!-- Post list links -->
   <ul class="post-list {{ image_style }}">
