--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -49,7 +49,7 @@
               {%- assign lang = return -%}
               <div class="page-link" style="display: inline;">
                   {%- include extensions/google-translate.html -%}
-              </span>
+              </div>
             {%- endif -%}
           </div>
         </nav>
