--- a/_includes/extensions/google-translate.html
+++ b/_includes/extensions/google-translate.html
@@ -23,7 +23,7 @@
       </li>
     {% endfor %}
   </ul>
-</span>
+</div>
 
 <script type="text/javascript">
 function googleTranslateElementInit() {
