--- a/_includes/sidebar/common-list.html
+++ b/_includes/sidebar/common-list.html
@@ -23,3 +23,12 @@
     {% endfor %}
   </ul>
 </div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fleechoongyon.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
