perf: better compatibility with deprecated divide method

--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -5,6 +5,7 @@
 // Recommendation: math.div($header-height, 1.5) or calc($header-height / 1.5)
 // More info and automated migrator: https://sass-lang.com/d/slash-div
 @use 'sass:math';
+@use 'sass:meta';
 
 // Define defaults for each variable.
 
@@ -61,6 +62,18 @@ $on-laptop:        800px !default;
 
 @mixin relative-font-size($ratio) {
   font-size: $base-font-size * $ratio;
+}
+
+// Better compatibility for divisions.
+//
+// Deprecation Warning: Using / for division outside of calc() is deprecated
+// and will be removed in Dart Sass 2.0.0."
+@function divide($dividend, $divisor: 1) {
+  @if meta.function-exists('div', 'math') {
+    @return math.div($dividend, $divisor);
+  } @else {
+    @return ($dividend / $divisor);
+  }
 }
 
 // Import partials.
