--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,10 @@
 layout: articles
 heading: 'Your awesome heading'
 subheading: 'Your awesome subheading'
-banner: 'default'
+banner:
+  image: 'default'
+  info_name: Hello World!
+  info_link: https://www.google.com/
 ---
 
 {{ content }}
