--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -107,7 +107,7 @@ html {
 
     .site-favicon {
       display: inline-block;
-      height: math.div($header-height, 1.5);
+      height: divide($header-height, 1.5);
       margin-right: 5px;
     }
   }
@@ -695,7 +695,7 @@ html {
   }
 
   @include media-query($on-palm) {
-    height: math.div($banner-height, 1.5);
+    height: divide($banner-height, 1.5);
   }
 }
 
