feat: changed website color to cis branding colors

--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -25,7 +25,7 @@ $grey-color:       #777 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
-$white-color: #fdfdfd !default;
+$white-color: #0cd6ff !default;
 
 $table-text-align: left !default;
 
