--- a/_includes/extensions/comments/disqus.html
+++ b/_includes/extensions/comments/disqus.html
@@ -1,3 +1,4 @@
+  <div id="disqus_recommendations"></div>
   <div id="disqus_thread"></div>
   <script>
     var disqus_config = function () {
@@ -5,13 +6,23 @@
       this.page.identifier = '{{ page.url | absolute_url }}';
     };
 
+    // Disqus comments
     (function() {
       var d = document, s = d.createElement('script');
-
       s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
-
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
     })();
+
+    // Disqus theme switching
+    document.addEventListener('theme-changed', function (e) {
+      if (document.readyState == 'complete') {
+        setTimeout(function () {
+          if (window.DISQUS) {
+            window.DISQUS.reset({ reload: true, config: disqus_config });
+          }
+        }, 100);
+      }
+    });
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
